# portfolio

./: .gitignore  AGENTS.md  CNAME  DEPLOYMENT.md  README.md  asset-manifest.json  graph-data.json  index.html  manifest.json  topic-index.json  topic-metadata.json
.github/workflows/: deploy-system-design.yml  deploy.yml
docs/casino-game/: poker-share-setup.md
docs/plans/: 2026-02-15-challenge-progress-server-persistence.md  2026-02-15-system-design-react-migration-design.md
docs/superpowers/: HOURGLASS_HANDOFF.md
lambda/auth/: index.mjs  package-lock.json  package.json
lambda/chat/: index.mjs  package-lock.json  package.json
portfolio/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js
portfolio/scripts/connect4-wasm/: Cargo.toml
portfolio/scripts/connect4-wasm/src/: lib.rs
scripts/: add-user.mjs  deploy-aws.sh  generate-granny-voice.mjs  generate-graph-data.mjs  generate-topic-index.mjs
telegram-bot/: .env.example  README.md  index.js  package-lock.json  package.json
topics/: ai-scraper-defense.html  api-gateway.html  cache-invalidation.html  cdn.html  chess-game-design.html  cicd-pipeline.html  coding-interview.html  database-basics.html  dependency-injection.html  deployment.html  interview-process.html  key-value-store.html  message-queue.html  metrics-logging.html  pick-database.html  print-vs-debugger.html  scraping-vs-crawling.html  secure-ai-agents.html  server-vs-serverless.html  session-manager.html  task-queue.html  unique-id-generator.html  url-shortener.html  video-streaming.html  welcome.html
(+1255 files in other folders)
